Fixed fade animation on load

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,7 @@
 // Components
 @import 'components/button';
 @import 'components/hamburger';
+@import 'components/fadein';
 
 // Other components as necessary
 
