--- a/src/scss/variables/typography.scss
+++ b/src/scss/variables/typography.scss
@@ -1,1 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+
+$family-sans-serif: "Nunito", sans-serif;
