--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,6 +122,9 @@ button {
 .menuelement {
   color: #18003C; }
 
+.fullheight {
+  height: 100%; }
+
 #menuToggle {
   display: none;
   position: fixed;
@@ -174,19 +177,17 @@ button {
   transform: rotate(-45deg) translate(0, 0px); }
 
 #menu {
-  position: absolute;
-  width: 300px;
-  height: 800px;
-  min-height: 100%;
-  margin: -100px 0 0 -230px;
-  padding: 50px;
-  padding-top: 125px;
+  position: fixed;
+  width: 100%;
+  margin: -60px 0 0 -30px;
+  padding: 30px;
+  padding-top: 100px;
   background: whitesmoke;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
   transform-origin: 0% 0%;
-  transform: translate(100%, 0);
+  transform: translate(0, -100%);
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
 
 #menu li {
@@ -202,7 +203,7 @@ button {
     display: block;
     position: absolute;
     top: 30px;
-    right: 30px;
+    left: 30px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none; }
