--- a/src/scss/components/hamburger-top.scss
+++ b/src/scss/components/hamburger-top.scss
@@ -1,16 +1,12 @@
 .menuelement {
     color: #18003C;
 }
-
+  
 #menuToggle {
     display: none;
     position: fixed;
     top: 50px;
     right: 50px;
-
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
     
     z-index: 1;
     
@@ -77,16 +73,11 @@
 }
   
 #menu {
-    position: absolute;
-    width: 300px;
-    
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    
-    margin: -100px 0 0 -230px;
-    padding: 50px;
-    padding-top: 125px;
+    position: fixed;
+    width: 100%;
+    margin: -60px 0 0 -30px;
+    padding: 25px;
+    padding-top: 100px;
     
     background: hsl(0, 0%, 96%);
     list-style-type: none;
@@ -94,7 +85,7 @@
     /* to stop flickering of text in safari */
     
     transform-origin: 0% 0%;
-    transform: translate(100%, 0);
+    transform: translate(0, -100%);
     
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
@@ -114,11 +105,7 @@
       display: block;
       position: absolute;
       top: 30px;
-      right: 30px;
-
-      min-height: 100%;
-      height: auto !important;
-      height: 100%;
+      left: 30px;
     
       z-index: 1;
     
