--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,7 +12,7 @@
 
 // Components
 @import 'components/button';
-@import 'components/hamburger';
+@import 'components/hamburger-top';
 @import 'components/fadein';
 
 // Other components as necessary
