--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,9 +122,6 @@ button {
 .menuelement {
   color: #18003C; }
 
-.fullheight {
-  height: 100%; }
-
 #menuToggle {
   display: none;
   position: fixed;
@@ -180,7 +177,7 @@ button {
   position: fixed;
   width: 100%;
   margin: -60px 0 0 -30px;
-  padding: 30px;
+  padding: 25px;
   padding-top: 100px;
   background: whitesmoke;
   list-style-type: none;
@@ -226,6 +223,11 @@ button {
 article {
   opacity: 1;
   transition: all 1s ease; }
+
+img {
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%); }
 
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
