--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,16 +1,12 @@
 .menuelement {
     color: #18003C;
 }
-
+  
 #menuToggle {
     display: none;
     position: fixed;
     top: 50px;
     right: 50px;
-
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
     
     z-index: 1;
     
@@ -79,11 +75,8 @@
 #menu {
     position: absolute;
     width: 300px;
-    
+    height: 800px;
     min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    
     margin: -100px 0 0 -230px;
     padding: 50px;
     padding-top: 125px;
@@ -115,10 +108,6 @@
       position: absolute;
       top: 30px;
       right: 30px;
-
-      min-height: 100%;
-      height: auto !important;
-      height: 100%;
     
       z-index: 1;
     
