--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,9 @@
 @import 'components/hamburger-top';
 @import 'components/fadein';
 
+// Filter
+@import 'filter/filter';
+
 // Other components as necessary
 
 // Utilities
