--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -75,7 +75,7 @@
 #menu {
     position: absolute;
     width: 300px;
-    height: 800px;
+    height: 100%;
     min-height: 100%;
     margin: -100px 0 0 -230px;
     padding: 50px;
