--- a/src/scss/components/hamburger-top.scss
+++ b/src/scss/components/hamburger-top.scss
@@ -4,14 +4,6 @@
   
 #menuToggle {
     display: none;
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    
-    z-index: 1;
-    
-    -webkit-user-select: none;
-    user-select: none;
 }
   
 #menuToggle input {
@@ -21,34 +13,13 @@
     position: absolute;
     top: -7px;
     left: -5px;
-    
     cursor: pointer;
-    
     opacity: 0;
     z-index: 2;
-    
     -webkit-touch-callout: none;
 }
-  
-#menuToggle span {
-    display: none;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    
-    background: #cdcdcd;
-    border-radius: 4px;
-    
-    z-index: 1;
-    
-    transform-origin: 4px 0px;
-    
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
-}
-  
+
+/* Spans represent hamburger button */
 #menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
@@ -71,7 +42,8 @@
 #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, 0px);
 }
-  
+
+/* actual menu */
 #menu {
     position: fixed;
     width: 100%;
@@ -87,7 +59,6 @@
     
     transform-origin: 0% 0%;
     transform: translate(0, -100%);
-    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
   
@@ -109,9 +80,7 @@
       position: fixed;
       top: 20px;
       right: 20px;
-    
       z-index: 1;
-    
       -webkit-user-select: none;
       user-select: none;
     }
@@ -122,15 +91,11 @@
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-    
     background: hsl(0, 0%, 96%);
-  
     border-radius: 0px;
-    
     z-index: 1;
     
     transform-origin: 4px 0px;
-    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
