Add new dark background class

--- a/src/scss/components/hamburger-top.scss
+++ b/src/scss/components/hamburger-top.scss
@@ -1,3 +1,6 @@
+/* darken background */
+
+
 .menuelement {
     color: #18003C;
 }
@@ -51,6 +54,7 @@
     padding: 30px;
     padding-top: 100px;
     right: 0;
+    z-inde
     
     background: hsl(0, 0%, 96%);
     list-style-type: none;
