--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,7 +13,7 @@
 // Components
 @import 'components/button';
 @import 'components/hamburger-top';
-@import 'components/fadein';
+@import 'components/fadeinbody';
 
 // Filter
 @import 'filter/grayscale';
