--- a/src/scss/components/hamburger-top.scss
+++ b/src/scss/components/hamburger-top.scss
@@ -1,7 +1,22 @@
 .menuelement {
     color: #18003C;
 }
-  
+
+/* Fade in dark background */
+.darkenbg {
+    opacity: 0.7 !important;
+}
+
+#darkenbackground {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index: 5;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
 #menuToggle {
     display: none;
 }
