--- a/src/scss/components/fadeinbody.scss
+++ b/src/scss/components/fadeinbody.scss
@@ -1,9 +1,9 @@
 .fadeinbody { 
-    opacity: 0;
+    opacity: 0 !important;
     transform: translateY(-40px);
 }
 
-article {
+.hero-body {
     opacity: 1;
     transition: all 1s ease;
 }
