--- a/src/scss/components/hamburger-top.scss
+++ b/src/scss/components/hamburger-top.scss
@@ -5,16 +5,22 @@
 /* Fade in dark background */
 .darkenbg {
     opacity: 0.7 !important;
+    transform: translateY(100%);
+    z-index: 5 !important;
 }
 
 #darkenbackground {
     position: fixed;
     width: 100%;
     height: 100%;
+    top: -100%;
     background: #000;
-    z-index: 5;
+    z-index: 0;
     opacity: 0;
-    transition: opacity 0.5s;
+    -moz-transition:all 0.2s;
+    -webkit-transition:all 0.2s;
+    transition: all 0.2s;
+    transition: opacity 0.5s ease;
 }
 
 #menuToggle {
@@ -93,7 +99,7 @@
     #menuToggle {
       display: block;
       position: fixed;
-      top: 20px;
+      top: 15px;
       right: 20px;
       z-index: 1;
       -webkit-user-select: none;
@@ -104,7 +110,7 @@
     display: block;
     width: 33px;
     height: 4px;
-    margin-bottom: 5px;
+    margin-top: 5px;
     position: relative;
     background: hsl(0, 0%, 96%);
     border-radius: 0px;
