--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,17 +1,31 @@
-.menuelement {
+/* Fade in dark background */
+.darkenbg {
+    opacity: 0.7 !important;
+    transform: translateY(100%);
+    z-index: 5 !important;
+}
+
+#darkenbackground {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    background: #000;
+    z-index: 0;
+    opacity: 0;
+    -moz-transition:all 0.2s;
+    -webkit-transition:all 0.2s;
+    transition: all 0.2s;
+    transition: opacity 0.5s ease;
+}
+
+/* menu */
+#menuelement {
     color: #18003C;
 }
-  
+
 #menuToggle {
-    display: none;
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    
-    z-index: 1;
-    
-    -webkit-user-select: none;
-    user-select: none;
+    display: block;
 }
   
 #menuToggle input {
@@ -21,34 +35,13 @@
     position: absolute;
     top: -7px;
     left: -5px;
-    
     cursor: pointer;
-    
     opacity: 0;
     z-index: 2;
-    
     -webkit-touch-callout: none;
 }
-  
-#menuToggle span {
-    display: none;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    
-    background: #cdcdcd;
-    border-radius: 4px;
-    
-    z-index: 1;
-    
-    transform-origin: 4px 0px;
-    
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
-}
-  
+
+/* Spans represent hamburger button */
 #menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
@@ -71,15 +64,15 @@
 #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, 0px);
 }
-  
+
+/* actual menu */
 #menu {
-    position: absolute;
-    width: 300px;
-    height: 100%;
-    min-height: 100%;
-    margin: -100px 0 0 -230px;
-    padding: 50px;
-    padding-top: 125px;
+    position: fixed;
+    width: 100%;
+    margin: -60px 0 0 -100%;
+    padding: 30px;
+    padding-top: 100px;
+    right: 0;
     
     background: hsl(0, 0%, 96%);
     list-style-type: none;
@@ -87,17 +80,18 @@
     /* to stop flickering of text in safari */
     
     transform-origin: 0% 0%;
-    transform: translate(100%, 0);
-    
+    transform: translate(0, -100%);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
-  
+
 #menu li {
     padding: 10px 0;
-    font-size: 22px;
+    font-size: 16pt;
     display: block;
+    text-align: right;
+    text-transform: uppercase;
 }
-  
+
 #menuToggle input:checked ~ ul {
     transform: none;
 }
@@ -105,12 +99,10 @@
 @media screen and (max-width: 1087px) {
     #menuToggle {
       display: block;
-      position: absolute;
-      top: 30px;
-      right: 30px;
-    
+      position: fixed;
+      top: 15px;
+      right: 20px;
       z-index: 1;
-    
       -webkit-user-select: none;
       user-select: none;
     }
@@ -119,19 +111,15 @@
     display: block;
     width: 33px;
     height: 4px;
-    margin-bottom: 5px;
+    margin-top: 5px;
     position: relative;
-    
     background: hsl(0, 0%, 96%);
-  
     border-radius: 0px;
-    
     z-index: 1;
     
     transform-origin: 4px 0px;
-    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
-    }   
+    }  
 }
