--- a/src/scss/components/hamburger-old.scss
+++ b/src/scss/components/hamburger-old.scss
@@ -1,30 +1,17 @@
 .menuelement {
     color: #18003C;
 }
-
-/* Fade in dark background */
-.darkenbg {
-    opacity: 0.7 !important;
-    transform: translateY(100%);
-    z-index: 5 !important;
-}
-
-#darkenbackground {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: -100%;
-    background: #000;
-    z-index: 0;
-    opacity: 0;
-    -moz-transition:all 0.2s;
-    -webkit-transition:all 0.2s;
-    transition: all 0.2s;
-    transition: opacity 0.5s ease;
-}
-
+  
 #menuToggle {
     display: none;
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    
+    z-index: 1;
+    
+    -webkit-user-select: none;
+    user-select: none;
 }
   
 #menuToggle input {
@@ -34,13 +21,34 @@
     position: absolute;
     top: -7px;
     left: -5px;
+    
     cursor: pointer;
+    
     opacity: 0;
     z-index: 2;
+    
     -webkit-touch-callout: none;
 }
-
-/* Spans represent hamburger button */
+  
+#menuToggle span {
+    display: none;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    
+    background: #cdcdcd;
+    border-radius: 4px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+  
 #menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
@@ -63,15 +71,15 @@
 #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, 0px);
 }
-
-/* actual menu */
+  
 #menu {
-    position: fixed;
-    width: 100%;
-    margin: -60px 0 0 -100%;
-    padding: 30px;
-    padding-top: 100px;
-    right: 0;
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    min-height: 100%;
+    margin: -100px 0 0 -230px;
+    padding: 50px;
+    padding-top: 125px;
     
     background: hsl(0, 0%, 96%);
     list-style-type: none;
@@ -79,16 +87,15 @@
     /* to stop flickering of text in safari */
     
     transform-origin: 0% 0%;
-    transform: translate(0, -100%);
+    transform: translate(100%, 0);
+    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
   
 #menu li {
     padding: 10px 0;
-    font-size: 16pt;
+    font-size: 22px;
     display: block;
-    text-align: right;
-    text-transform: uppercase;
 }
   
 #menuToggle input:checked ~ ul {
@@ -98,10 +105,12 @@
 @media screen and (max-width: 1087px) {
     #menuToggle {
       display: block;
-      position: fixed;
-      top: 15px;
-      right: 20px;
+      position: absolute;
+      top: 30px;
+      right: 30px;
+    
       z-index: 1;
+    
       -webkit-user-select: none;
       user-select: none;
     }
@@ -110,13 +119,17 @@
     display: block;
     width: 33px;
     height: 4px;
-    margin-top: 5px;
+    margin-bottom: 5px;
     position: relative;
+    
     background: hsl(0, 0%, 96%);
+  
     border-radius: 0px;
+    
     z-index: 1;
     
     transform-origin: 4px 0px;
+    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
