--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,49 +1,28 @@
 .button-animated {
     margin: 0;
     padding: 20px;
+
     text-align: center;
     text-transform: uppercase;
     font-size: 12pt;
     font-weight: 600;
+    color: #FFF;
+
     position: relative;
-    overflow: hidden;
-    transition: .4s;
-    color: #00D1B2;
+    transition: .3s;
 }
 
 .button-animated:after {
-    position: absolute;
-    transition: .4s;
-    content: '';
-    width: 0;
-    left: 0%;
-    bottom: 0;
+    background: #FFF;
     height: 3px;
-    background: #00D1B2;
-}
+    width: 0;
+    left: 0;
+    bottom: 0;
 
-.button-animated:nth-of-type(2):after {
-    left: 0;
-}
-  
-.button-animated:nth-of-type(3):after {
-    right: 0;
-    left: auto;
-}
-  
-.button-animated:nth-of-type(4):after {
-    left: 0;
-    bottom: auto;
-    top: -3px;
-    width: 100%;
-}
-  
-.button-animated:nth-of-type(5):after {
-    height: 120%;
-    left: -10%;
-    -webkit-transform: skewX(15deg);
-            transform: skewX(15deg);
-    z-index: -1;
+    position: absolute;
+    transition: .3s;
+    
+    content: '';
 }
   
 .button-animated:hover {
@@ -52,59 +31,4 @@
   
 .button-animated:hover:after {
     width: 100%;
-    left: 0%;
 }
-  
-.button-animated:hover:nth-of-type(4):after {
-    top: calc(100% - 3px);
-}
-  
-.button-animated:hover:nth-of-type(5) {
-    color: #5bcaff;
-}
-  
-.button-animated:hover:nth-of-type(5):after {
-    left: -10%;
-    width: 120%;
-}
-  
-.button-animated:hover:nth-of-type(6) {
-    flex-grow: 3;
-}
-  
-.button-animated:hover:nth-of-type(6):after {
-    width: 0%;
-}
-  
-.button-animated:hover:nth-of-type(7) {
-    border-radius: 30px;
-}
-  
-.button-animated:hover:nth-of-type(7):after {
-    width: 0%;
-}
-  
-.button-animated:hover:nth-of-type(8) {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-}
-  
-.button-animated:hover:nth-of-type(8):after {
-    width: 0%;
-}
-  
-.button-animated:hover:nth-of-type(9) {
-    box-shadow: inset 0px 0px 0px 3px #f7f7f7;
-}
-  
-.button-animated:hover:nth-of-type(9):after {
-    width: 0%;
-}
-  
-.button-animated:hover:nth-of-type(10) {
-    box-shadow: 0px 0px 0px 3px #f7f7f7;
-}
-  
-.button-animated:hover:nth-of-type(10):after {
-    width: 0%;
-}  
