--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,4 +1,4 @@
-/* Fade in dark background */
+/* Fades in the dark background */
 .darkenbg {
     opacity: 0.7 !important;
     z-index: 5 !important;
@@ -17,7 +17,7 @@
 }
 
 /* menu toggles */
-#menuelement {
+.menuelement {
     color: #18003C;
 }
 
@@ -27,18 +27,18 @@
   
 #menuToggle input {
     display: block;
-    width: 40px;
-    height: 30px;
+    width: 33px;
+    height: 22px;
     position: absolute;
-    top: -7px;
-    left: -5px;
+    top: 5px;
+    left: 0;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
     -webkit-touch-callout: none;
 }
 
-/* Spans represent hamburger button */
+/* spans represent hamburger button */
 #menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
@@ -99,6 +99,7 @@
       position: fixed;
       top: 15px;
       right: 20px;
+      height: auto;
       z-index: 1;
       -webkit-user-select: none;
       user-select: none;
