--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,7 @@
 @import 'components/button';
 @import 'components/hamburger';
 @import 'components/fadeinbody';
+@import 'components/images';
 
 // Filter
 @import 'filter/grayscale';
