--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,6 +1,15 @@
+.navbar-menu {
+    position: fixed;
+    right: 4.5rem;
+    margin-right: 0 !important;
+}
+
+.container {
+    margin: 0 3rem !important;
+}
+
 .button-animated {
-    margin: 0;
-    padding: 20px;
+    padding: 12px;
 
     text-align: center;
     text-transform: uppercase;
@@ -14,7 +23,7 @@
 
 .button-animated:after {
     background: #FFF;
-    height: 3px;
+    height: 2px;
     width: 0;
     left: 0;
     bottom: 0;
