--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,11 +1,19 @@
 .navbar-menu {
+    position: relative;
+    right: 1.5rem;
     position: fixed;
-    right: 4.5rem;
-    margin-right: 0 !important;
+    top: 0;
 }
 
-.container {
-    margin: 0 3rem !important;
+.navbar-end {
+    margin-right: 3rem !important;
+}
+
+@media screen and (max-width: 1087px) {
+    .navbar-menu {
+        right: 0;
+        margin-right: 1rem;
+    }
 }
 
 .button-animated {
