--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,18 +1,16 @@
 .button-animated {
-    padding: 12px;
-
+    padding-top: 20px;
     text-align: center;
     text-transform: uppercase;
     font-size: 12pt;
     font-weight: 600;
-    color: #FFF;
 
     position: relative;
     transition: .3s;
 }
 
 .button-animated:after {
-    background: #FFF;
+    background:hsl(0, 0%, 96%);
     height: 2px;
     width: 0;
     left: 0;
