--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -1,17 +1,31 @@
+.navbar-link {
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 0;
+}
+
+.navbar-link, .navbar-item {
+    color: hsl(0, 0%, 96%) !important;
+}
+
 .navbar-menu {
     position: relative;
-    right: 1.5rem;
+    right: 4.5rem;
     position: fixed;
     top: 0;
 }
 
-.navbar-end {
-    margin-right: 3rem !important;
+.navbar-start {
+    margin-top: 5px;
 }
 
 @media screen and (max-width: 1087px) {
     .navbar-menu {
         right: 0;
         margin-right: 1rem;
+    }
+
+    .navbar {
+        background-color: #18003C !important;
     }
 }
