--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,6 +1,6 @@
 /* Fades in the dark background */
 .darkenbg {
-    opacity: 0.7 !important;
+    opacity: 0.6 !important;
     z-index: 1 !important;
 }
 
@@ -11,9 +11,9 @@
     background: #000;
     z-index: 0;
     opacity: 0;
-    -moz-transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
+    -moz-transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
 }
 
 /* menu toggles */
@@ -30,7 +30,7 @@
     width: 33px;
     height: 22px;
     position: absolute;
-    top: 5px;
+    bottom: 5px;
     left: 0;
     cursor: pointer;
     opacity: 0;
@@ -97,8 +97,8 @@
     #menuToggle {
       display: block;
       position: fixed;
-      top: 10px;
-      right: 20px;
+      top: 1.5rem;
+      right: 1.5rem;
       height: auto;
       z-index: 1;
       -webkit-user-select: none;
@@ -109,7 +109,7 @@
     display: block;
     width: 33px;
     height: 4px;
-    margin-top: 5px;
+    margin-bottom: 5px;
     position: relative;
     background: hsl(0, 0%, 96%);
     border-radius: 0px;
