--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,8 @@
 @import 'components/hamburger';
 @import 'components/fadeinbody';
 @import 'components/images';
+@import 'components/cards';
+@import 'components/tiles';
 
 // Filter
 @import 'filter/grayscale';
