--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -31,6 +31,7 @@
     .navbar-brand {
         margin-left: 1.5rem;
         margin-top: 0.75rem;
+        font-size: 16pt;
     }
 
     .navbar-item {
