--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,7 +1,7 @@
 /* Fades in the dark background */
 .darkenbg {
     opacity: 0.6 !important;
-    z-index: 1 !important;
+    z-index: 5 !important;
 }
 
 #darkenbackground {
@@ -18,7 +18,8 @@
 
 /* menu toggles */
 .menuelement {
-    color: #18003C;
+    color: hsl(0, 0%, 21%);
+    letter-spacing: 2px;
 }
 
 #menuToggle {
@@ -27,8 +28,8 @@
   
 #menuToggle input {
     display: block;
-    width: 33px;
-    height: 22px;
+    width: 27px;
+    height: 16px;
     position: absolute;
     bottom: 5px;
     left: 0;
@@ -66,9 +67,9 @@
 #menu {
     position: fixed;
     width: 100%;
-    margin: -60px 0 0 -100%;
-    padding: 30px;
-    padding-top: 100px;
+    margin: 0 0 0 -100%;
+    padding: 1.75rem;
+    padding-bottom: 4rem;
     right: 0;
     
     background: hsl(0, 0%, 96%);
@@ -82,11 +83,11 @@
 }
 
 #menu li {
-    padding: 10px 0;
+    padding-top: 30px;
+    padding-right: 0;
     font-size: 16pt;
     display: block;
     text-align: right;
-    text-transform: uppercase;
 }
 
 #menuToggle input:checked ~ ul {
@@ -107,11 +108,11 @@
       
     #menuToggle span {
     display: block;
-    width: 33px;
-    height: 4px;
+    width: 27px;
+    height: 2px;
     margin-bottom: 5px;
     position: relative;
-    background: hsl(0, 0%, 96%);
+    background: hsl(0, 0%, 21%);
     border-radius: 0px;
     z-index: 1;
     
