Adjust navbar height and the connected paddings.

--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -1,3 +1,5 @@
+$navbar-height: 3.75rem;
+
 .navbar {
     padding: 0 4.5rem;
     font-weight: 600;
@@ -15,7 +17,7 @@
 
     .navbar-item, .navbar-link {
         padding: 0 !important;
-        padding-top: 0.75rem !important;
+        padding-top: 0.5rem !important;
         z-index: 5;
     }
 }
