--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -69,7 +69,7 @@
 #menu {
     position: fixed;
     width: 100%;
-    margin: 0.95rem 0 0 -100%;
+    margin: 1.1rem 0 0 -100%;
     padding: 1.75rem;
     padding-bottom: 4rem;
     right: 0;
@@ -82,6 +82,8 @@
     transform-origin: 0% 0%;
     transform: translate(0, -100%);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+    display: none;
 }
 
 #menu li {
@@ -122,5 +124,9 @@
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
-    }  
+    }
+
+    #menu {
+        display: block;
+    }
 }
