--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -7,7 +7,7 @@ $navbar-height: 3.75rem;
     background-color:hsl(0, 0%, 86%);
     z-index: 1;
     top: 3.75rem;
-    position: absolute;
+    position: fixed;
 }
 
 /* helps with the padding */
