--- a/src/scss/components/images.scss
+++ b/src/scss/components/images.scss
@@ -3,3 +3,11 @@
     height: 200px;
     width: auto;
   }
+
+.header-image {
+    background-image: url("https://i.imgur.com/ubBvrj0.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #999;
+}
