--- a/src/scss/components/images.scss
+++ b/src/scss/components/images.scss
@@ -5,7 +5,8 @@
   }
 
 .header-image {
-    background-image: url("https://i.imgur.com/ubBvrj0.jpg");
+    /*background-image: url("https://i.imgur.com/ubBvrj0.jpg");*/
+    background-image: url("https://i.imgur.com/5HekPlk.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
