Adjust image position

--- a/src/scss/components/images.scss
+++ b/src/scss/components/images.scss
@@ -7,9 +7,9 @@
 .header-image {
     /*background-image: url("https://i.imgur.com/ubBvrj0.jpg");*/
     background-image: url("https://i.imgur.com/5HekPlk.jpg");
-    background-position: center center;
+    background-position: center 40%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #999;
+    background-color: #FFF;
     z-index: 0;
 }
