--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -69,7 +69,7 @@
 #menu {
     position: fixed;
     width: 100%;
-    margin: 1.1rem 0 0 -100%;
+    margin: 0 0 0 -100%;
     padding: 1.75rem;
     padding-bottom: 4rem;
     right: 0;
@@ -102,7 +102,7 @@
     #menuToggle {
       display: block;
       position: fixed;
-      top: 1.35rem;
+      top: 1.4rem;
       right: 1.5rem;
       height: auto;
       z-index: 1;
@@ -128,5 +128,6 @@
 
     #menu {
         display: block;
+        top: 3.75rem;
     }
 }
