--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -20,6 +20,26 @@ $navbar-height: 3.75rem;
     position: fixed;
 }
 
+.helper-one {
+    height: 1rem;
+    width: 1rem;
+    background-color: red;
+    position: absolute;
+    top: 8rem;
+    right: 10rem;
+    z-index: 50;
+}
+
+.helper-two {
+    height: 1rem;
+    width: 1rem;
+    background-color: red;
+    position: absolute;
+    top: 2.33rem;
+    right: 10rem;
+    z-index: 50;
+}
+
 .brandimg {
     padding-top: 0.5rem !important;
     margin-bottom: 8px;
