--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -15,12 +15,12 @@
 
 .welcome-text {
     padding: 1rem 0;
-    padding-bottom: 1.75rem;
+    padding-top: 0.5rem;
 }
 
 .contact-text {
     padding: 1rem 0;
-    padding-bottom: 1.75rem;
+    padding-top: 0.5rem;
 }
 
 @media screen and (max-width: 1087px) {
