Add space to work heading

--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -23,6 +23,10 @@
   padding-top: 0.5rem;
 }
 
+.work-heading {
+  padding-bottom: 3rem;
+}
+
 @media screen and (max-width: 1087px) {
   .aboutline {
     width: 30%;
