--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -13,6 +13,7 @@
   left: 0;
   bottom: 0;
   height: 2px;
+  filter: drop-shadow(0 0 0.75rem #000);
   background: hsl(0, 0%, 21%);
 }
 
@@ -24,7 +25,8 @@
   width: 100%;
   left: 0%;
 }
-/* animated brand button */
+
+/* without underline */
 .button-animated-min {
   transition: all .3s ease;
 }
