--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -3,7 +3,7 @@
 }
 
 .aboutline {
-  height: .5px;
+  height: 1px;
   width: 15%;
   background-color: #363636;
   margin: 3rem auto;
@@ -25,6 +25,10 @@
 
 .work-heading {
   padding-bottom: 3rem;
+}
+
+.work-container {
+  margin: 0 3rem !important;
 }
 
 @media screen and (max-width: 1087px) {
