--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -28,7 +28,7 @@
 }
 
 .work-container {
-  margin: 0 3rem !important;
+  margin: 0 3rem;
 }
 
 @media screen and (max-width: 1087px) {
@@ -38,5 +38,9 @@
 
   .about-text {
     padding: 0 0;
+  }
+
+  .work-container {
+    margin: 0 0;
   }
 }
