--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -2,6 +2,6 @@
   padding: 3rem 1.5rem 3rem !important;
 }
 
-.is-footer-element {
-  margin-bottom: 0.25rem !important;
+.has-smaller-margin {
+  margin: 0 !important;
 }
