--- a/src/scss/components/images.scss
+++ b/src/scss/components/images.scss
@@ -2,7 +2,7 @@
   border-radius: 50%;
   height: 200px;
   width: auto;
-  filter: drop-shadow(0 0 0.75rem #AAA);
+  filter: drop-shadow(0 0 0.75rem #BBB);
 }
 
 .header-image {
