Adjust line color

--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -9,7 +9,7 @@
 .aboutline {
   height: 1px;
   width: 15%;
-  background-color: #363636;
+  background-color: hsl(0, 0%, 86%);
   margin: 3rem auto;
 }
 
