--- a/src/scss/components/cards.scss
+++ b/src/scss/components/cards.scss
@@ -6,13 +6,15 @@
   transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
+  z-index: 1 !important;
+  box-shadow: 0px 0px 0px 0px rgba(10,10,10,0.1) !important;
 }
 
 .card:hover {
   transform: translateY(-0.5rem);
-  transition: all 0.5s ease;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   /*filter: drop-shadow(0 0 0.75rem #AAA);*/
-  box-shadow: 0px 3rem 3rem -1.25rem rgba(10,10,10,0.1);
+  box-shadow: 0px 3rem 3rem -1.25rem rgba(10,10,10,0.1) !important;
 }
 
 @media screen and (max-width: 769px) {
