--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
 $darkgrey: #222;
-$grey: #ededed;
+$grey: 	hsl(0, 0%, 48%);
 $purple: #18003C;
 $red: #FF4A49;
 $info: $purple;
-$link: hsl(0, 0%, 48%);
+$link: $grey;
