--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -1,7 +1,9 @@
 $white: #ffffff;
 $darkgrey: #222;
 $grey: 	hsl(0, 0%, 48%);
-$purple: #18003C;
 $red: #FF4A49;
-$info: $purple;
-$link: $grey;
+$primary: #4D38FF;
+$dark: #2D3542;
+$link: $dark;
+$link-hover-border: $dark;
+$border-hover: $dark;
