--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -40,18 +40,27 @@ $navbar-height: 3.75rem;
   z-index: 50;
 }
 
-.brandimg {
-  padding-top: 0.5rem !important;
-  margin-bottom: 8px;
-  margin-top: .5px;
-}
-
 /* nav */
 .navbar {
   padding: 0 4.5rem;
   font-weight: 600;
-  text-transform: uppercase;
   font-size: 1rem;
+}
+
+.brand-button{
+  padding: 0 0 !important;
+}
+
+.navbar-item {
+  background-color: #FFF !important;
+}
+
+.navbar-item:hover {
+  color: hsl(0, 0%, 21%) !important;
+}
+
+.navbar-item:active {
+  color: hsl(0, 0%, 21%) !important;
 }
 
 .spaced-letters {
